--- a/app/views/employees/edit.html.slim
+++ b/app/views/employees/edit.html.slim
@@ -24,7 +24,7 @@ h2
       = f.text_field :juminno
     p
       = f.label :bankbook_name
-      = f.select :bankbook_id, options_for_bankbooks_select(@employee.bankbook)
+      = f.select :bankbook_id, options_for_bankbooks_select(@employee.bankbook, collection: Bankbook.select{|bankbook| !bankbook.employee})
 
     - if current_person.admin?
       p
