--- a/app/views/employees/new.html.slim
+++ b/app/views/employees/new.html.slim
@@ -18,7 +18,7 @@ h2
       = f.text_field :juminno
     p
       = f.label :bankbook_name
-      = f.select :bankbook_id, options_for_bankbooks_select(@employee.bankbook)
+      = f.select :bankbook_id, options_for_bankbooks_select(@employee.bankbook, collection: Bankbook.select{|bankbook| !bankbook.employee})
     p
       = f.label :joined_on, Employee.human_attribute_name('joined_on')
       = f.date_select :joined_on, :order => [:year, :month, :day]
