--- a/app/views/dayworker_taxes/show.html.slim
+++ b/app/views/dayworker_taxes/show.html.slim
@@ -6,7 +6,7 @@
   = " "
   = link_to t('common.title.edit'), edit_dayworker_taxis_path(dayworker_tax)
   = " "
-  = link_to t('common.title.destroy'), dayworker_tax, method: :delete, confirm: "Are you sure?"
+  = link_to t('common.title.destroy'), dayworker_tax, method: :delete, data: {confirm: "Are you sure?"}
   = " "
   = link_to t('common.title.list'), dayworker_taxes_path
 
