--- a/app/views/taxbills/index.html.slim
+++ b/app/views/taxbills/index.html.slim
@@ -44,6 +44,7 @@
         th= BusinessClient.human_attribute_name('owner')
         th= Taxbill.human_attribute_name('total')
         th= PaymentRequest.human_attribute_name(:request_status)
+        th= Report.human_attribute_name('status')
         th.link_button_area
       - @taxbills.each do |taxbill|
         tr.selectable.link_to*{"data-url" => taxbill_path(taxbill)}
@@ -66,6 +67,8 @@
             =h number_to_currency taxbill.total
           td
             = taxbill.request_status
+          td
+            =h taxbill.localize_status
           td.link_button_area
             = link_to t('common.button.detail_veiw'), taxbill, class: 'btn btn-primary'
     br
