--- a/app/views/payrolls/show.html.slim
+++ b/app/views/payrolls/show.html.slim
@@ -11,18 +11,21 @@
     = link_to t('common.title.destroy'), payroll, :method => :delete, data: {confirm: t("common.messages.delete_confirm")}
     = " "
   = link_to t('common.title.list'), :payrolls
-h2= "#{payroll.payday} : #{payroll.employee.fullname}"
+h2
+  = payroll.payday
+  | : 
+  = payroll.employee.fullname
+  = " "
+  = number_to_currency payroll.difference_total
 
-table#list-table
-  tr
-    th= PayrollCategory.human_attribute_name("title")
-    th= PayrollItem.human_attribute_name("amount")
-    - if current_person.admin?
-      th= t("common.menu")
-  - payroll.items.each do |item|
-    tr
-      td= item.payroll_category.title rescue ""
-      td.numrow= number_to_currency item.amount
-      - if current_person.admin?
-        td= link_to t("common.title.edit"), edit_payroll_payroll_item_path(payroll,item)
-    
+h3
+  | 지급항목:
+  = " "
+  = number_to_currency payroll.payable_total
+= render 'payroll_items/list', payroll: payroll, items: payroll.payable
+
+h3
+  | 공제항목:
+  = " "
+  = number_to_currency payroll.deductable_total
+= render 'payroll_items/list', payroll: payroll, items: payroll.deductable
