--- a/app/views/hyundai_card_approved_histories/_list.html.slim
+++ b/app/views/hyundai_card_approved_histories/_list.html.slim
@@ -33,3 +33,5 @@
           - if menu
             td.link_button_area
               = link_to t('common.button.detail_veiw'), approved_history, class: 'btn btn-primary'
+  center
+    = will_paginate @approved_histories
