--- a/app/views/oversea_card_approved_histories/_list.html.slim
+++ b/app/views/oversea_card_approved_histories/_list.html.slim
@@ -39,6 +39,8 @@
           - if menu
             td.link_button_area
               = link_to t('common.button.detail_veiw'), approved_history, class: 'btn btn-primary'
+  center
+    = will_paginate @approved_histories
 
 - else
   h4= t('.empty')
