--- a/app/views/shinhan_card_approved_histories/_list.html.slim
+++ b/app/views/shinhan_card_approved_histories/_list.html.slim
@@ -31,6 +31,7 @@
           - if menu
             td.link_button_area
               = link_to t('common.button.detail_veiw'), approved_history, class: 'btn btn-primary'
-
+  center
+    = will_paginate @approved_histories
 - else
   h4= t('.empty')
