--- a/app/views/card_histories/_list.html.slim
+++ b/app/views/card_histories/_list.html.slim
@@ -1,3 +1,8 @@
+- content_for :search do
+  = form_tag :card_histories, :method => :get do
+    = select_tag :creditcard_id, options_for_creditcard_select(params[:creditcard_id]), "onchange" => "this.form.submit()"
+    = submit_tag t('common.button.search')
+
 - unless @card_histories.empty?
   table#list-table
     tr
