--- a/app/views/creditcards/show.html.slim
+++ b/app/views/creditcards/show.html.slim
@@ -1,4 +1,20 @@
 #show_command
+  - unless @creditcard.shinhan_card_used_histories.empty?
+    = link_to "이용내역 보기", shinhan_card_used_histories_path(creditcard_id: @creditcard)
+    = " "
+  - unless @creditcard.shinhan_card_approved_histories.empty?
+    = link_to "승인내역 보기", shinhan_card_approved_histories_path(creditcard_id: @creditcard)
+    = " "
+  - unless @creditcard.hyundai_card_used_histories.empty?
+    = link_to "이용내역 보기", hyundai_card_used_histories_path(creditcard_id: @creditcard)
+    = " "
+  - unless @creditcard.hyundai_card_approved_histories.empty?
+    = link_to "승인내역 보기", hyundai_card_approved_histories_path(creditcard_id: @creditcard)
+    = " "
+  - unless @creditcard.oversea_card_approved_histories.empty?
+    = link_to "승인내역 보기", oversea_card_approved_histories_path(creditcard_id: @creditcard)
+    = " "
+
   = link_to "사용내역 보기", card_histories_path(creditcard_id: @creditcard.id)
   = " "
   = link_to t("common.title.edit"), edit_creditcard_path(@creditcard)
