--- a/app/views/hyundai_card_used_histories/show.html.slim
+++ b/app/views/hyundai_card_used_histories/show.html.slim
@@ -1,5 +1,7 @@
-
 #show_command
+  - if @used_history.creditcard
+    = link_to "신용카드 보기", @used_history.creditcard
+    = " "
   = link_to t('common.title.edit'), [:edit, @used_history]
   = " "
   = link_to t('common.title.destroy'), @used_history, :method => :delete, data: {confirm: t("common.messages.delete_confirm")}
