--- a/app/views/assets/show.html.slim
+++ b/app/views/assets/show.html.slim
@@ -1,8 +1,12 @@
 #show_command
-  = link_to t('common.title.edit'), [:edit, @asset]
-  = " "
-  = link_to t('common.title.destroy'), @asset, :method => :delete, data: {confirm: t("common.messages.delete_confirm")}
-  = " "
+  - if @asset.owner
+    = link_to "반납", [:return, @asset], method: :put
+    = " "
+  - if current_person.admin?
+    = link_to t('common.title.edit'), [:edit, @asset]
+    = " "
+    = link_to t('common.title.destroy'), @asset, :method => :delete, data: {confirm: t("common.messages.delete_confirm")}
+    = " "
   = link_to t('common.title.list'), :assets
 
 h3 자산 정보
@@ -12,3 +16,5 @@ h3 자산 정보
     dd= @asset.title
     dt= Asset.human_attribute_name(:description)
     dd= @asset.description
+    dt= Asset.human_attribute_name(:owner)
+    dd= @asset.owner_name
