add go to bank button

--- a/app/views/assets/index.html.slim
+++ b/app/views/assets/index.html.slim
@@ -1,6 +1,8 @@
-
 #show_command
   = link_to t("common.title.new"), [:new, :asset]
+  = " "
+  = link_to t('common.title.back'), :root
+
 h2 ...
 
 table#list-table
