--- a/app/views/oversea_card_approved_histories/show.html.slim
+++ b/app/views/oversea_card_approved_histories/show.html.slim
@@ -13,7 +13,7 @@ h3 해외카드 승인내역
 .box
   dl
     dt= OverseaCardApprovedHistory.human_attribute_name("used_at")
-    dd= @approved_history.used_at
+    dd=ldate @approved_history.used_at
     dt= OverseaCardApprovedHistory.human_attribute_name("approved_number")
     dd= @approved_history.approved_number
     dt= OverseaCardApprovedHistory.human_attribute_name("card_name")
@@ -37,8 +37,8 @@ h3 해외카드 승인내역
     dt= OverseaCardApprovedHistory.human_attribute_name("card_type")
     dd= @approved_history.card_type
     dt= OverseaCardApprovedHistory.human_attribute_name("refused_at")
-    dd= @approved_history.refused_at
+    dd=ldate @approved_history.refused_at
     dt= OverseaCardApprovedHistory.human_attribute_name("purchase_status")
     dd= @approved_history.purchase_status
     dt= OverseaCardApprovedHistory.human_attribute_name("will_be_paied_at")
-    dd= @approved_history.will_be_paied_at
+    dd=ldate @approved_history.will_be_paied_at
