--- a/app/views/shinhan_card_used_histories/show.html.slim
+++ b/app/views/shinhan_card_used_histories/show.html.slim
@@ -24,9 +24,9 @@ h3 신한카드 승인내역
     dt= ShinhanCardUsedHistory.human_attribute_name("approve_no")
     dd= @used_history.approve_no
     dt= ShinhanCardUsedHistory.human_attribute_name("approved_at")
-    dd= @used_history.approved_at
+    dd=ldate @used_history.approved_at
     dt= ShinhanCardUsedHistory.human_attribute_name("approved_time")
-    dd= @used_history.approved_time
+    dd=ldate @used_history.approved_time
     dt= ShinhanCardUsedHistory.human_attribute_name("sales_type")
     dd= @used_history.sales_type
     dt= ShinhanCardUsedHistory.human_attribute_name("money_krw")
