--- a/app/views/assets/_form.html.slim
+++ b/app/views/assets/_form.html.slim
@@ -9,8 +9,12 @@ h2= t("common.title.#{action_name}")
     p
       = f.label :description
       = f.text_area :description
-    p
-      = f.label :owner
-      = f.select :owner_id, options_for_employees_select(@asset.owner)
+    - if current_person.admin?
+      p
+        = f.label :owner
+        = f.select :owner_id, options_for_employees_select(@asset.owner)
+    - else
+      p
+        = f.hidden_field :owner_id, value: current_person.employee.id
   p
     = f.submit
