--- a/app/views/card_histories/show.html.slim
+++ b/app/views/card_histories/show.html.slim
@@ -15,7 +15,7 @@ h3 카드 사용내역 정보
     dt= CardHistory.human_attribute_name(:creditcard_name)
     dd= @card_history.creditcard_name
     dt= CardHistory.human_attribute_name(:transacted_at)
-    dd= @card_history.transacted_at
+    dd=ldate @card_history.transacted_at
     dt= CardHistory.human_attribute_name(:amount)
     dd= number_to_currency @card_history.amount
     dt= CardHistory.human_attribute_name(:amount_local)
