--- a/app/views/card_histories/_list.html.slim
+++ b/app/views/card_histories/_list.html.slim
@@ -20,9 +20,9 @@
       tr.selectable.link_to*{"data-url" => card_history_path(card_history)}
         td= card_history.creditcard_name
         td=ldate card_history.transacted_at
-        td= number_to_currency card_history.amount
-        td= number_to_currency card_history.amount_local
-        td= number_to_currency card_history.amount_dollar
+        td.numrow= number_to_currency card_history.amount
+        td.numrow= number_to_currency card_history.amount_local
+        td.numrow= number_to_currency card_history.amount_dollar
         td= card_history.country
         td= card_history.store_name
         td= card_history.approved_status
