--- a/app/views/payment_records/index.html.slim
+++ b/app/views/payment_records/index.html.slim
@@ -1,3 +1,10 @@
+- content_for :search do
+  = form_tag :payment_records, :method => :get do
+    = t("common.title.search")
+    '  :
+    = search_field_tag :query, params[:query]
+    = select_tag :request_status, options_for_payment_request_select, "onchange" => "this.form.submit()"
+
 #show_command
   = link_to t('common.title.new'), [:new, :payment_record]
 
