--- a/app/views/application/_changelog.html.slim
+++ b/app/views/application/_changelog.html.slim
@@ -1,3 +1,5 @@
 - if current_person.admin?
-  h3= t("common.changes")
-  = render 'changelog_item', target: target
+	button.btn type="button" data-toggle="collapse" data-target="#changelog"
+		= t("common.changes")
+	#changelog class="collapse in"
+		= render 'changelog_item', target: target
