--- a/app/views/main/_main_menu3.html.slim
+++ b/app/views/main/_main_menu3.html.slim
@@ -1,6 +1,6 @@
 div.container
 	div.row
-		div.span8
+		div
 			h1
 				' 미결제 목록 (결재대기중)
 			p
@@ -13,5 +13,5 @@ div.container
 								- else
 									span.label.label-warning= report.localize_status
 								= link_to report.target.summary, report.target
-		div.span4
-			= render partial: "this_week"
+/!		div.span4
+/!			= render partial: "this_week"
