--- a/app/views/bank_accounts/show.html.slim
+++ b/app/views/bank_accounts/show.html.slim
@@ -18,4 +18,5 @@ h2 ...
     = dtdd bank_account, "note"
   = render "shared/attachments/detail", :target => bank_account
   .clear
+= render 'reports/info', target: bank_account
 = render 'changelog', target: bank_account
