--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -134,7 +134,7 @@ background-color: #507AAA;*/
   position: relative;
 }
 
-h1 {
+/*h1 {
   margin: 0;
   padding: 0;
   font-size: 24px;
@@ -156,6 +156,7 @@ h3 {
   border-bottom: 1px solid #bbbbbb;
   color: #444;
 }
+*/
 
 div.flash {
   padding: 4px 4px 4px 30px;
@@ -197,7 +198,7 @@ div.flash.alert {
 }
 
 #attach {
-  float: left;
+  float: right;
   margin-left: 20px;
 }
 
@@ -271,7 +272,7 @@ tr.related {
 .clear {
   clear: both;
 }
-
+/*
 dl { 
   padding: 0.5em;
 }
@@ -292,233 +293,10 @@ dd {
   margin: 0 0 0 16em; 
   padding: 0 0 0.5em 0; 
 }
-
-
-ul#css3menu_top,ul#css3menu_top ul{
-  margin:0;list-style:none;padding:0;background-color:#dedede;border-width:1px;border-style:solid;border-color:#5f5f5f;-moz-border-radius:5px;-webkit-border-radius:5px;border-radius:5px;}
-ul#css3menu_top ul{
-  display:none;position:absolute;left:0;top:100%;width:130px;-moz-box-shadow:3.5px 3.5px 5px #000000;-webkit-box-shadow:3.5px 3.5px 5px #000000;box-shadow:3.5px 3.5px 5px #000000;padding:0 10px 10px;background-color:#424542;border-width:2px;border-radius:6px;-moz-border-radius:6px;-webkit-border-radius:6px;border-color:#FFF;}
-ul#css3menu_top li:hover>*{
-  display:block;}
-ul#css3menu_top li:hover{
-  position:relative;}
-ul#css3menu_top ul ul{
-  position:absolute;left:100%;top:0;}
-ul#css3menu_top{
-  display:block;font-size:0;float:left;}
-ul#css3menu_top li{
-  display:block;white-space:nowrap;font-size:0;float:left;}
-ul#css3menu_top>li,ul#css3menu_top li{
-  margin:0;}
-ul#css3menu_top a:active, ul#css3menu_top a:focus{
-  outline-style:none;}
-ul#css3menu_top a{
-  display:block;vertical-align:middle;text-align:left;text-decoration:none;font:bold 14px Trebuchet MS,sans-serif;color:#000;text-shadow:#FFF 0 0 1px;cursor:pointer;padding:10px;background-color:#444444;background-image:url("mainbk.png");background-repeat:repeat;background-position:0 0;border-width:0 0 0 1px;border-style:solid;border-color:#C0C0C0;}
-ul#css3menu_top ul li{
-  float:none;margin:10px 0 0;}
-ul#css3menu_top ul a{
-  text-align:left;padding:4px;background-color:#424542;background-image:none;border-width:0;border-radius:0px;-moz-border-radius:0px;-webkit-border-radius:0px;font:14px Tahoma,sans-serif;color:#FFF;text-decoration:none;text-shadow:#FFF 0 0 0;}
-ul#css3menu_top li:hover>a{
-  background-color:#444444;border-color:#C0C0C0;border-style:solid;font:bold 14px Trebuchet MS,sans-serif;color:#FFF;text-decoration:none;text-shadow:#FFF 0 0 1px;background-image:url("mainbk.png");background-position:0 100px;}
-ul#css3menu_top img{
-  border:none;vertical-align:middle;margin-right:10px;}
-ul#css3menu_top img.over{
-  display:none;}
-ul#css3menu_top li:hover > a img.def{
-  display:none;}
-ul#css3menu_top li:hover > a img.over{
-  display:inline;}
-ul#css3menu_top span{
-  display:block;overflow:visible;background-position:right center;background-repeat:no-repeat;padding-right:0px;}
-ul#css3menu_top ul span{
-  background-image:url("arrowsub.png");padding-right:24px;}
-ul#css3menu_top ul li:hover>a{
-  background-color:#424542;background-image:none;font:14px Tahoma,sans-serif;color:#64b937;text-decoration:none;text-shadow:#FFF 0 0 0;}
-ul#css3menu_top li.topfirst>a{
-  height:20px;line-height:20px;border-width:0;border-radius:4px 0 0 4px;-moz-border-radius:4px 0 0 4px;-webkit-border-radius:4px;-webkit-border-top-right-radius:0;-webkit-border-bottom-right-radius:0;}
-ul#css3menu_top li.topfirst:hover>a{
-  line-height:20px;}
-ul#css3menu_top li.topmenu>a{
-  height:20px;line-height:20px;}
-ul#css3menu_top li.topmenu:hover>a{
-  line-height:20px;}
-ul#css3menu_top li.toplast>a{
-  height:20px;line-height:20px;border-radius:0 4px 4px 0;-moz-border-radius:0 4px 4px 0;-webkit-border-radius:0;-webkit-border-top-right-radius:4px;-webkit-border-bottom-right-radius:4px;}
-ul#css3menu_top li.toplast:hover>a{
-  line-height:20px;}
-
-ul#css3menu ul{
-  display:none;position:absolute;left:-1px;top:98%;padding:0 6px 6px;}
-ul#css3menu li:hover>*{
-  display:block;}
-ul#css3menu li:hover{
-  position:relative;}
-ul#css3menu ul ul{
-  position:absolute;left:98%;top:-2px;}
-ul#css3menu,ul#css3menu ul{
-  margin:0;list-style:none;background-color:#000000; background-image:-moz-linear-gradient(50% 0%,rgba(255,255,255,0.38),rgba(255,255,255,0.16));background-image:-webkit-gradient(linear,50% 0%,50% 100%,from(rgba(255,255,255,0.38)),to(rgba(255,255,255,0.16)));background-repeat:repeat;border-width:1px;border-style:solid;border-color:#343434;-moz-border-radius:28px;-webkit-border-radius:28px;border-radius:28px;-moz-box-shadow:1.4px 1px 2px #B1B1B1;-webkit-box-shadow:1.4px 1px 2px #B1B1B1;box-shadow:1.4px 1px 2px #B1B1B1;}
-ul#css3menu{
-  padding:6px 6px 6px 0;display:block;font-size:0;position:absolute;z-index:1000;left:10px;top:10px;}
-ul#css3menu li{
-  display:block;white-space:nowrap;font-size:0;float:left;}
-ul#css3menu>li,ul#css3menu li{
-  margin:0 0 0 6px;}
-ul#css3menu ul>li{
-  margin:6px 0 0;}
-ul#css3menu a:active, ul#css3menu a:focus{
-  outline-style:none;}
-ul#css3menu a{
-  display:block;vertical-align:middle;border-width:0;border-style:solid;border-color:transparent;text-align:left;text-decoration:none;padding:8px 20px;font:12px Arial,sans-serif;color:#E7E5E5;cursor:pointer;}
-ul#css3menu ul li{
-  float:none;}
-ul#css3menu ul a{
-  text-align:left;}
-ul#css3menu li:hover>a{
-  background-color:#7ACF27;border-color:#F8F8F8;border-style:solid;font:12px Arial,sans-serif;color:#333;text-decoration:none; background-image:-moz-linear-gradient(50% 0%,rgba(255,255,255,0.38),rgba(85,170,0,0.7));background-image:-webkit-gradient(linear,50% 0%,50% 100%,from(rgba(255,255,255,0.38)),to(rgba(85,170,0,0.7)));filter:progid:DXImageTransform.Microsoft.gradient(gradientType=0,startColorstr=#60FFFFFF,endColorstr=#B355AA00)}
-ul#css3menu img{
-  border:none;vertical-align:middle;margin-right:16px;width:16px;height:16px;}
-ul#css3menu ul img{
-  width:16px;height:16px;}
-ul#css3menu img.over{
-  display:none;}
-ul#css3menu li:hover > a img.def{
-  display:none;}
-ul#css3menu li:hover > a img.over{
-  display:inline;}
-ul#css3menu ul span{
-  background-image:none;padding-right:16px;}
-ul#css3menu li.topitem>a{
-  background-color:traspar;border-width:1px 0 0 0;border-style:solid;border-color:#484848;;border-radius:1.6em;-moz-border-radius:1.6em;-webkit-border-radius:1.6em;font:bold 13px Arial,sans-serif;color:#E7E5E5;text-decoration:none;text-shadow:0 1px 1px #000000;}
-ul#css3menu li.topitem:hover>a{
-  background-color:#7dfa00; background-image:-moz-linear-gradient(50% 0%,rgba(255,255,255,0.77),rgba(85,170,0,0.7));background-image:-webkit-gradient(linear,50% 0%,50% 100%,from(rgba(255,255,255,0.77)),to(rgba(85,170,0,0.7)));border-style:solid;border-color:#F8F8F8;font:'bold 13px Arial,sans-serif';color:#444444;text-decoration:none;text-shadow:0 1px 0 #C5EAA1;filter:progid:DXImageTransform.Microsoft.gradient(gradientType=0,startColorstr=#C6FFFFFF,endColorstr=#B355AA00)}
-/*ul#css3menu .submenu>li{
-  margin:0;}*/
-ul#css3menu .submenu{
-  background-color:#202020; background-image:-moz-linear-gradient(50% 0%,rgba(255,255,255,0.16),rgba(255,255,255,0));background-image:-webkit-gradient(linear,50% 0%,50% 100%,from(rgba(255,255,255,0.16)),to(rgba(255,255,255,0)));border-radius:10px;-moz-border-radius:10px;-webkit-border-radius:10px;border-color:#000000;padding:0;}
-ul#css3menu li.subfirst>a{
-  border-radius:9px 9px 0 0;-moz-border-radius:9px 9px 0 0;-webkit-border-radius:9px 9px 0 0;}
-ul#css3menu li.sublast>a{
-  border-radius:0 0 9px 9px;-moz-border-radius:0 0 9px 9px;-webkit-border-radius:0 0 9px 9px;}
-
-
-.menubar {
-  position: relative;
-  width: 750px;
-  margin: 0 auto;
-  clear: both;
-}
-.admin .menubar {
-  width: 900px;
-}
-.menubar_item {
-  width: 130px;
-  float: left;
-  margin-right: 10px;
-  display: block;
-  /*border: 1px solid black;*/
-}
-.this_week {
-  width: 180px;
-  float: left;
-  margin-right: 0px;
-  display: block;	
-}
-.item5 {
-  margin-right: 10px;
-}
-.menubar h2 {
-  display: block;
-  font-size: 16px;
-  line-height: 30px;
-  color: #A5A4A4;
-  letter-spacing: -1px;
-  word-spacing: 3px;
-  margin-left: 25px;
-  border: none;
-}
-.menubar ul {
-  list-style: none;
-  padding: 0px;
-}
-.menubar li {
-  border-bottom: 1px solid #C6C6C6;
-  padding-bottom: 9px;
-  margin-bottom: 6px;
-}
-.menubar a {
-  color: #232323;
-  outline: none;
-  cursor: pointer;
-  text-decoration: none;
-}
+*/
 
 .this_week li {
   border: none;
-}
-@media only screen and (max-width: 1023px){
-  .admin .menubar {
-    width: 740px;
-  }
-  .admin .this_week {
-    clear: left;
-  }
-  .admin .item5 {
-    margin-right: 0px;
-  }
-}
-@media only screen and (max-width: 767px){
-  .menubar {
-    width: 440px;
-  }  
-  .item3 {
-	margin-right: 0px;
-  }
-  .item4 {
-	clear: left;
-  }
-  .admin .menubar {
-    width: 450px;
-  } 
-  .admin .item3 {
-    margin-right: 0px;
-  }
-  .admin .item5 {
-	margin-right: 10px;
-  }
-  .admin .this_week {
-	clear: none;
-  }
-}
-@media only screen and (max-width: 479px){
-  .menubar {
-    width: 300px;
-  }  
-  .item2 {
-	margin-right: 0px;
-  }
-  .item3 {
-	margin-right: 10px;
-  }
-  .item4 {
-	clear: none;
-  }
-  .this_week {
-	clear: none;
-  }
-
-  .admin .menubar {
-    width: 300px;
-  }
-  .admin .item2 {
-    margin-right: 0px;
-  }
-  .admin .item3 {
-    margin-right: 10px;
-  }
-  .admin .item4 {
-    margin-right: 0px;
-
-  }
 }
 
 .holiday {
