--- a/app/views/permissions/index.html.slim
+++ b/app/views/permissions/index.html.slim
@@ -11,6 +11,8 @@ div class={current_person.admin? ? "admin" : ""}
         li= link_to t("pettycashes.index.title"), permission_path(:pettycashes)
         li= link_to t("cardbills.index.title"), permission_path(:cardbills)
         li= link_to t("bank_accounts.index.title"), permission_path(:bank_accounts)
+        li= link_to t("bank_transactions.title"), permission_path(:bank_transactions)
+        li= link_to t("bank_transfers.title"), permission_path(:bank_transfers)
         li= link_to t("bankbooks.title"), permission_path(:bankbooks)
         li= link_to t("taxbills.index.title"), permission_path(:taxbills)
         li= link_to t("expense_reports.index.title"), permission_path(:expense_reports)
