--- a/app/views/application/_header.html.slim
+++ b/app/views/application/_header.html.slim
@@ -6,7 +6,7 @@ div#main_nav.navbar.navbar-fixed-top
         span.icon-bar
         span.icon-bar
 
-      = link_to 'Mint Office', :root, class: 'brand'
+      = link_to 'mint office', :root, class: 'brand'
       div.nav-collapse
         - if current_employee
           ul.nav
