--- a/app/views/reports/_info.html.slim
+++ b/app/views/reports/_info.html.slim
@@ -21,9 +21,9 @@ p
         = text_field_tag :comment
       p
         - if report.rollback?
-          = submit_tag t('reports.info.rollback'), name: 'rollback'
+          = submit_tag t('reports.info.rollback'), name: 'rollback', class:'btn'
         - if report.report?
-          = submit_tag t('reports.info.report'), name: 'report'
+          = submit_tag t('reports.info.report'), name: 'report', class:'btn'
   - else
     = form_tag :report do
       = hidden_field_tag :target_type, target.class
@@ -33,9 +33,9 @@ p
         = text_field_tag :comment
       p
         - if report.rollback?
-          = submit_tag t('reports.info.rollback'), name: 'rollback'
+          = submit_tag t('reports.info.rollback'), name: 'rollback', class:'btn'
         - if report.approve?
-          = submit_tag t('reports.info.approve'), name: 'approve'
+          = submit_tag t('reports.info.approve'), name: 'approve', class:'btn'
 
   = render 'reports/log', target: target
 
