--- a/app/views/used_vacations/show.html.slim
+++ b/app/views/used_vacations/show.html.slim
@@ -1,22 +1,29 @@
-#show_command
-  - if [:not_reported, :rollback].include? @used_vacation.report.status or current_person.admin?
-    = link_to t('common.title.edit'), [:edit, @used_vacation.vacation, @used_vacation]
-    = " "
-    = link_to t('common.title.destroy'), [@used_vacation.vacation, @used_vacation], :method => :delete, data: {confirm: t("common.messages.delete_confirm")}
-    = " "
-  = link_to t('common.title.list'), vacation_path(@used_vacation.vacation.employee)
+ul.breadcrumb
+  li
+    span= t('.title')
+    span.divider= '/'
+  li
+    span= link_to @used_vacation.vacation.employee.fullname, vacation_path(@used_vacation.vacation.employee)
+    span.divider= '/'
+  li
+    span #{@used_vacation.from}~#{@used_vacation.to}
 
-h2= t('.title')
-
-.box
-  dl
-    = dtdd @used_vacation, "type_title"
-    = dtdd @used_vacation, "from"
-    = dtdd @used_vacation, "to"
-    dt
-      = @used_vacation.class.human_attribute_name('period')
-    dd
-      = "#{@used_vacation.period} #{t('datetime.prompts.day')}"
-    = dtdd @used_vacation, "note"
-
-= render 'reports/info', target: @used_vacation
+.container-fluid
+  .row-fluid
+    .span8
+      dl
+        = dtdd @used_vacation, "type_title"
+        = dtdd @used_vacation, "from"
+        = dtdd @used_vacation, "to"
+        dt
+          = @used_vacation.class.human_attribute_name('period')
+        dd
+          = "#{@used_vacation.period} #{t('datetime.prompts.day')}"
+        = dtdd @used_vacation, "note"
+      - if [:not_reported, :rollback].include? @used_vacation.report.status or current_person.admin?
+        = link_to t('common.title.edit'), [:edit, @used_vacation.vacation, @used_vacation], class: "btn"
+        = " "
+        = link_to t('common.title.destroy'), [@used_vacation.vacation, @used_vacation], :method => :delete, data: {confirm: t("common.messages.delete_confirm")}, class: "btn btn-danger"
+    .span4
+      .well
+        = render 'reports/info', target: @used_vacation
