--- a/app/views/accessors/_info.html.slim
+++ b/app/views/accessors/_info.html.slim
@@ -19,9 +19,9 @@ ul
     = hidden_field_tag :resources_id, access_target.id
     p
       = label_tag :access_type, t('activerecord.attributes.access_person.access_type')
-      = select_tag :access_type, options_for_select([[t('accessors.info.read'), "read"], [t('accessors.info.write'), "write"]])
+      = select_tag :access_type, options_for_select([[t('accessors.info.read'), "read"], [t('accessors.info.write'), "write"]]), class: "span12"
     p
       = label_tag :accessor, t('activerecord.attributes.access_person.accessor')
-      = select_tag :accessor, options_for_people_and_group_select
+      = select_tag :accessor, options_for_people_and_group_select, class: "span12"
     p
       = submit_tag
