--- a/app/views/main/index.html.slim
+++ b/app/views/main/index.html.slim
@@ -1,9 +1,10 @@
 #logo
   = image_tag 'mint_logo.png'
 
-= calendar @events do |event|
-	- if event.class.name == 'Holiday'
-		div.holiday = event.title
-	- else
-		div.vacation = event.title
+div.hidden-phone
+	= calendar @events do |event|
+		- if event.class.name == 'Holiday'
+			div.holiday = event.title
+		- else
+			div.vacation = event.title
 = render partial: "main_menu3"
